2007-03-07 Lorenzo Natale  <nat@liralab.it>
        * FindGSL.cmake

2007-03-07 Lorenzo Natale <nat@liralab.it>
	* libYARPsig: Matrix and Vector classes
	
2007-03-06  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/FindGtkPlus.cmake: Make sure pkg-config is loaded on
	linux if available.

2007-02-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/NameServer.cpp: Name server port now 
	produces output when ports are registered/unregistered, you
	can do "yarp read ... /root" to eavesdrop.

2007-02-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/tutorial: This example is a simple simulation of a 
	pan/tilt robot head, with simulated vision, and motor control.

2007-02-22  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarp-imageviewer/gCamView.cpp: Reduce verbosity of 
	yarpview program; now it prints messages to the console
	only when things go wrong, now when they are going right.

2007-02-17  Alexandre Bernardino  <alex@isr.ist.utl.pt>

	* conf/FindAce.cmake: Added specific rules for linking with MinGW:
	-lwinmm -lwsock32

2007-02-16  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Terminator.cpp: registered terminator
	sockets in a way that distinguishes them from ports.

	* src/doc/cmd_*.dox: freshened the documentation of the basic
	yarp programs (yarp, yarpdev, yarpview).

2007-02-15  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/NameServer.h: add a new "yarp name
	gc" command.  This does garbage collection for port names.  Every
	port for which "yarp exists /portname" returns false gets removed.
	This will clean up port information registered by processes which
	were interrupted without unregistering those ports.

2007-02-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/port_power, src/doc/port_expert.dox: extend
	tutorial material

	* src/libYARP_OS/include/yarp/Companion.h: added a new
	"yarp wait /portname" command.  Replicates the functionality