@@ -1,3 +1,7 @@
+2007-03-08 Lorenzo Natale  <nat@liralab.it>
+        * Added example/matrix: contains examples of how to use
+	Matrix and Vector classes.
+
 2007-03-07 Lorenzo Natale  <nat@liralab.it>
         * FindGSL.cmake
 
